add mysql config

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,13 @@ set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 
+
 set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@:colors=256"
+
+### キーバインド ###
+
+# ペイン間キー操作同期
+bind e setw synchronize-panes on
+bind E setw synchronize-panes off
 
 
