--- a/tmux.conf
+++ b/tmux.conf
@@ -4,13 +4,20 @@ set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 
-
 set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@:colors=256"
+
+set -g @tpm_plugins '         \
+  tmux-plugins/tpm            \
+  tmux-plugins/tmux-resurrect \
+'
+
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-processes 'irb pry "~rails server" "~rails console"'
+
+run-shell '~/.tmux/plugins/tpm/tpm'
 
 ### キーバインド ###
 
 # ペイン間キー操作同期
 bind e setw synchronize-panes on
 bind E setw synchronize-panes off
-
-
