--- a/tmux.conf
+++ b/tmux.conf
@@ -1,20 +1,18 @@
 
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set-option -g mouse on
+set-option -g default-terminal screen-256color
 
-set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@:colors=256"
-
-set -g @tpm_plugins '         \
-  tmux-plugins/tpm            \
-  tmux-plugins/tmux-resurrect \
-'
-
-set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-processes 'irb pry "~rails server" "~rails console"'
-
-run-shell '~/.tmux/plugins/tpm/tpm'
+# set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@:colors=256"
+# 
+# set -g @tpm_plugins '         \
+#   tmux-plugins/tpm            \
+#   tmux-plugins/tmux-resurrect \
+# '
+# 
+# set -g @resurrect-strategy-vim 'session'
+# set -g @resurrect-processes 'irb pry "~rails server" "~rails console"'
+# 
+# run-shell '~/.tmux/plugins/tpm/tpm'
 
 ### キーバインド ###
 
