--- a/tmux.conf
+++ b/tmux.conf
@@ -1,21 +1,30 @@
+# Mac Specific Settings:
+# brew install reattach-to-user-namespace
+#-------------------------------------------------------------------
+# set-option -g default-command "reattach-to-user-namespace -l fish"
 
-set-option -g mouse on
-set-option -g default-terminal screen-256color
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
 
-# set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@:colors=256"
-# 
-# set -g @tpm_plugins '         \
-#   tmux-plugins/tpm            \
-#   tmux-plugins/tmux-resurrect \
-# '
-# 
-# set -g @resurrect-strategy-vim 'session'
-# set -g @resurrect-processes 'irb pry "~rails server" "~rails console"'
-# 
-# run-shell '~/.tmux/plugins/tpm/tpm'
+# Setup 'v' to begin selection as in Vim
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-### キーバインド ###
+# Update default binding of `Enter` to also use copy-pipe
+unbind-key -T copy-mode-vi Enter
+# bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-# ペイン間キー操作同期
+#-------------------------------------------------------------------
+
+# Window and Pane key binds
+bind-key %   split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
+bind-key c   new-window      -c "#{pane_current_path}"
 bind e setw synchronize-panes on
 bind E setw synchronize-panes off
+
+set-option -g mouse on
+
+# set-option -g default-terminal screen-256color
+set-option -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
